# monan-jedi-workflow

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
docs/: 3dvar_fgat_workflow_manual.md  README.md  architecture.md  architecture_review_mpas_workflow.md  baseline-3dfgat-inventory.md  basic_file_format_validation.md  basic_ioda_structure_validation.md  config-reference-resolution.md  configuration.md  configuration_fragment_model.md  conversation-handoff-cycled-da.md  cycle-dag.md  cycle-doctor.md  cycle-dry-run.md  cycle-stage-configuration.md  data_layout_bootstrap.md  diagnostico-e-logs.md  entradas-e-saidas.md  experiment_validation.md  external_input_root.md  fgat-trajectory-model.md  fgat_window_validation.md  first_real_3dvar_fgat_case.md  input_consistency.md  input_source_registry.md  input_source_sync.md  input_staging.md  ioda_inventory.md  jaci_real_input_preparation.md  jaci_setup.md  jaci_site_environment.md  jedi_configuration.md  jedi_observer_config_validation.md  migration_notes.md  mpas-jedi-configuration-model.md  mpas-workflow-foundation.md  mpas_background_validation.md  mpas_configuration.md  mpas_jedi_build_discovery.md  mpas_jedi_build_finder.md  (+26 more)
docs-site/: index.md
monan_jedi_workflow/: __init__.py  cli.py  cli_extended.py  cli_mpas.py  cli_v2.py  components.py  composition.py  config.py  cycle_context.py  cycle_dag.py  cycle_plan.py  doctor.py  dry_run.py  fragments.py  init_stage.py  input_sources.py  manifest.py  mpas_extensions.py  mpas_pipeline.py  mpas_render.py  mpas_stage.py  nmc_campaign.py  nmc_campaign_runner.py  obs2ioda_stage.py  pbs.py  provenance.py  references.py  site.py  (+9 more)
(+274 files in other folders)
