[project]
name = "monan-jedi-workflow"
version = "0.1.0"
description = "Minimal Python-first workflow for MONAN MPAS-JEDI experiments."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
monan-jedi-workflow = "monan_jedi_workflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
