[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monan-jedi-workflow"
version = "0.1.0"
description = "Minimal Python-first workflow for MONAN MPAS-JEDI experiments."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
monan-jedi-workflow = "monan_jedi_workflow.cli_extended:main"

[tool.setuptools.packages.find]
include = ["monan_jedi_workflow*"]
exclude = ["configs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
